# cellscope

./: .gitignore  README.md  Untitled.ipynb  cli_cellscope.py  pyproject.toml  tmp_handlers.py
cellscope/: __init__.py  ast_capture.py  containerizer_adapter.py  cross_kernel.py  indexer.py  rocrate_io.py  utils.py  validate_crate.py  visualize.py
cellscope_cli/: __main__.py
cellscope_server/: __init__.py  handlers.py
config/: sparql.env  thresholds.txt
examples/: multi_kernel_demo.ipynb
labextension/: README.md  package-lock.json  tsconfig.json
labextension/buildutils/: build-labextension.js  stage-to-venv.js
labextension/labextension/: package.json
labextension/labextension/schemas/cellscope-lab/: package.json.orig  plugin.json
labextension/labextension/static/: 509.2ebf21fa34ba7b9429fd.js  509.569ff913d25371e8f071.js  509.b321be4f397fe9e95705.js  821.8c3ea5a6a5daf7bc8d13.js  821.bd5965bdc31b3b8a7917.js  remoteEntry.5b61162495e7c104cea5.js  remoteEntry.856b2c3f1d36de9bfaac.js  remoteEntry.88d7a35c82b24e67f2f4.js  remoteEntry.a3800a924530a934a05e.js  remoteEntry.bb17add6bdf3e9865919.js
labextension/src/: index.ts
labextension/style/: index.css
